--- a/src/styles/Home.scss
+++ b/src/styles/Home.scss
@@ -10,7 +10,7 @@
   justify-content: center;
   position: relative;
   padding: 1rem;
-  scroll-snap-align: center;
+  scroll-snap-align: start;
   @include desktop {
     padding: 2rem;
   }
