--- a/src/styles/Work.scss
+++ b/src/styles/Work.scss
@@ -7,7 +7,6 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-between;
   padding: 1rem 0;
   scroll-snap-align: start;
   @include desktop {
@@ -19,6 +18,7 @@
     letter-spacing: 1rem;
     font-size: 2rem;
     font-weight: 100;  
+    padding-top: 3rem;
     @include desktop {
       font-size: 5rem;
       letter-spacing: 2rem;
@@ -28,8 +28,10 @@
   &__display {
     display: flex;
     justify-content: center;
+    align-items: center;
     width: 100%;
     flex-wrap: wrap;
+    height: 100%;
   }
 
   &__box {
@@ -87,7 +89,23 @@
 
   &__down {
     height: 1.5rem;
-    opacity: 0.4;
+    opacity: 0.2;
+    position: absolute;
+    bottom: 3rem;
+    &:hover {
+      opacity: 1;
+      cursor: pointer;
+    }
+    @include desktop {
+      bottom: 1rem
+    }
+  }
+
+  &__up {
+    height: 1.5rem;
+    opacity: 0.2;
+    position: absolute;
+    top: 1rem;
     &:hover {
       opacity: 1;
       cursor: pointer;
